live filter seems to be working but still got that damn bug of empty input field not showing anything in the table list

--- a/static/bootstrap-override.css
+++ b/static/bootstrap-override.css
@@ -63,6 +63,10 @@ h1 > small {
 	font-size: 75%;
 }
 
+table#livefilter-list {
+	margin-top: 50px;
+}
+
 .basin-content {
 	width: 750px;
 }
